# dockerfile-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
dockerfile_parser/: __init__.py  dockerfile_instruction.py  dockerfile_parser.py
dockerfile_parser/tests/: test_parser.py
dockerfile_tools/: __main__.py  get_pullable_images.py  inject_proxy_ca.py
dockerfile_tools/tests/: test_pullable_images.py
instruction_parser/: instructions.py  parser.py
instruction_parser/tests/: test_instruction_parser.py
